--- a/index.html
+++ b/index.html
@@ -8,29 +8,35 @@
   
   <title>Frontend Mentor | Product preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="styles/style.css">
+
 </head>
 <body>
+  <main>
 
-  Preview
+    <section>
+      <div class="img-div">
+        <img src="images/image-product-desktop.jpg" alt="">
+      </div>
+    </section>
 
-  Gabrielle Essence Eau De Parfum
-
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
-
-  $149.99
-  $169.99
-
-  Add to Cart
+    <section class="content">
+      <aside>
+        <h4>Perfume</h4>
+        <h1>Gabrielle <br> Essence Eau <br> De Parfum</h1>
+        <p>A floral, solar and voluptuous <br> interpretation composed by <br> Olivier Polge, 
+          Perfumer-Creator <br> for the House of CHANEL.</p>
+          <p class="price-discount">$149.99</p> <p class="price-retail">$169.99</p>
+          
+          <button>Add to Cart</button>
+      </aside>
+    </section>
   
-  <div class="attribution">
+</main>
+  
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    Coded by <a href="#">Adam Al-ibraheem</a>.
+  </footer>
 </body>
 </html>
